; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_write_dmae_phys_len.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_write_dmae_phys_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bxe_softc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bxe_write_dmae_phys_len(%struct.bxe_softc* %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.bxe_softc*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.bxe_softc* %0, %struct.bxe_softc** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load %struct.bxe_softc*, %struct.bxe_softc** %5, align 8
  %12 = call i32 @DMAE_LEN32_WR_MAX(%struct.bxe_softc* %11)
  store i32 %12, i32* %9, align 4
  store i32 0, i32* %10, align 4
  br label %13

13:                                               ; preds = %17, %4
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = icmp sgt i32 %14, %15
  br i1 %16, label %17, label %35

17:                                               ; preds = %13
  %18 = load %struct.bxe_softc*, %struct.bxe_softc** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = load i32, i32* %10, align 4
  %21 = sext i32 %20 to i64
  %22 = add nsw i64 %19, %21
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %10, align 4
  %25 = add nsw i32 %23, %24
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @bxe_write_dmae(%struct.bxe_softc* %18, i64 %22, i32 %25, i32 %26)
  %28 = load i32, i32* %9, align 4
  %29 = mul nsw i32 %28, 4
  %30 = load i32, i32* %10, align 4
  %31 = add nsw i32 %30, %29
  store i32 %31, i32* %10, align 4
  %32 = load i32, i32* %9, align 4
  %33 = load i32, i32* %8, align 4
  %34 = sub nsw i32 %33, %32
  store i32 %34, i32* %8, align 4
  br label %13

35:                                               ; preds = %13
  %36 = load %struct.bxe_softc*, %struct.bxe_softc** %5, align 8
  %37 = load i64, i64* %6, align 8
  %38 = load i32, i32* %10, align 4
  %39 = sext i32 %38 to i64
  %40 = add nsw i64 %37, %39
  %41 = load i32, i32* %7, align 4
  %42 = load i32, i32* %10, align 4
  %43 = add nsw i32 %41, %42
  %44 = load i32, i32* %8, align 4
  %45 = call i32 @bxe_write_dmae(%struct.bxe_softc* %36, i64 %40, i32 %43, i32 %44)
  ret void
}

declare dso_local i32 @DMAE_LEN32_WR_MAX(%struct.bxe_softc*) #1

declare dso_local i32 @bxe_write_dmae(%struct.bxe_softc*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
